--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ deploy:
   skip-cleanup: true
   keep-history: true
   github-token: $GITHUB_TOKEN
-  local-dir: dist/
+  local-dir: build/
   target-branch: master
   commit_message: "Deploy release ${TRAVIS_TAG}"
   on:
